# dbt-airflow-snowflake

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: cleanup_dag.py  dbt_pipeline.py
airflow/dags/utils/: constants.py  dbt_logger.py  dbt_runner.py  get_creds.py  telegram_alert.py  telegram_message.py
dbt_project/: .sqlfluff  .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: hash.sql
dbt_project/models/business_vault/: pit_customer.sql  sat_customer_business.sql  sat_eff_customer_order.sql  schema.yml
dbt_project/models/marts/: dim_customer.sql  dim_date.sql  dim_product.sql  fct_orders.sql  schema.yml
dbt_project/models/raw_vault/: schema.yml
dbt_project/models/raw_vault/hubs/: hub_customer.sql  hub_order.sql
dbt_project/models/raw_vault/links/: link_customer_order.sql
dbt_project/models/raw_vault/sats/: sat_customer_invar.sql  sat_customer_var.sql  sat_order_details.sql  sat_order_status.sql
dbt_project/models/snowflake_analytics/business_vault/: pit_customer.sql  sat_customer_business.sql  sat_eff_customer_order.sql
dbt_project/models/snowflake_analytics/marts/: dim_customer.sql  dim_date.sql  fct_orders.sql
dbt_project/models/snowflake_analytics/staging/: sources.yml  stg_customer.sql  stg_orders.sql
dbt_project/models/staging/: stg_customer.sql  stg_lineitem.sql  stg_orders.sql
dbt_project/seeds/: customer_marketing.csv
(+7 files in other folders)
