[project]
name = "dbt-airflow-snowflake"
version = "0.1.0"
description = "Monorepo for Airflow + DBT + Snowflake (Data Vault)"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==2.8.1",
    "dbt-snowflake==1.7.2",
    "astronomer-cosmos==1.9.0",
    "loguru==0.7.2",
    "sqlfluff==3.0.0",
    "python-dotenv==1.0.1",
    "sqlfluff-templater-dbt==3.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.0.0",
    "pre-commit==3.6.0",
]

[tool.sqlfluff.core]
dialect = "snowflake"
templater = "jinja"
runaway_limit = 10
max_line_length = 120
exclude_rules = "CP01,CP02,ST06,LT05"
ignore = "templating"

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.indentation]
tab_space_size = 4

[tool.sqlfluff.layout.type.comma]
spacing_before = "touch"
line_position = "trailing"
